# aoc2025

./: .gitignore  README.md  pyproject.toml
aoc2025/: cli.py
aoc2025/day01/: main.py
aoc2025/day02/: main.py
aoc2025/day03/: main.py
aoc2025/day04/: main.py
aoc2025/day05/: main.py
aoc2025/day06/: main.py
aoc2025/day07/: main.py
aoc2025/day08/: main.py
