[project]
name = "aoc2025"
version = "0.1.0"
description = "Advent of Code 2025"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "networkx>=3.6",
    "typing-extensions>=4.15.0",
]

[project.scripts]
aoc = "aoc2025.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.12.0",
]
